# MDB_BFF

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  babel.cfg  lancer_serveur.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  serveur_local.bat
.claude/: settings.json
app/: __init__.py  celery_app.py  config.py  enums.py  extensions.py
app/blueprints/admin/: __init__.py  routes.py
app/blueprints/affaires/: __init__.py  routes.py
app/blueprints/api/: __init__.py  routes.py
app/blueprints/auth/: __init__.py  routes.py
app/blueprints/dashboard/: __init__.py  routes.py
app/blueprints/dossier/: __init__.py  routes.py
app/blueprints/fichiers/: __init__.py  routes.py
app/blueprints/formulaires/: __init__.py  routes.py
app/blueprints/jalons/: __init__.py  routes.py
app/blueprints/referentiels/: __init__.py  routes.py
app/cli/: api_token.py  data_metaux_apport.py  data_organismes_notifies.py  data_soudeurs.py  import_registre.py  seed.py
app/forms/: admin.py  affaire.py  auth.py  fiche_technique.py  wizard.py
app/forms/formulaires/: hydr.py
app/models/: __init__.py  affaire.py  audit.py  base.py  fichier.py  formulaire.py  jalon.py  referentiel.py  registre_be.py  signature.py  user.py
app/services/: affaire.py  alertes.py  email.py  jalons.py  ldap_auth.py  network.py  ped_categorie.py  registre_be.py  suppression.py  tasks_alertes.py
app/services/formulaires/: __init__.py  airsav.py  attdecr.py  attrep.py  azote.py  base.py  bim.py  bimsoud.py  confcom.py  dim.py  durete.py  etatdesc.py  ferrite.py  hydr.py  listcnd.py  listsoud.py  nde_map.py  ped.py  pesage.py  pmi.py  proprete.py  recordhydro.py  rolling.py  sechage.py  tth.py  ut0.py  visufinal.py
app/templates/: base.html
app/translations/: messages.pot
app/utils/: decorators.py  file_handler.py  validators.py
docs/: DEPLOIEMENT_HTTPS.md  ETAT_DES_LIEUX_2026-07-01.md  HEBERGEMENT_V1.1_COMPARATIF.md  LDAP_AD_MISE_EN_SERVICE.md  STRATEGIE_AMELIORATIONS_V1.2_2026-07-16.md  V1_FINALISATION_2026-07-01.md
migrations/versions/: 6d7f9b70296a_initial_schema_users_affaires_.py  a1b2c3d4e5f6_phase4_jalons_holdpoints_referentiels.py  a7b8c9d0e1f2_soudeur_matricule_initiales.py  a9c1d2e3f4b5_registre_be_colonnes_reglementation.py  b1c2d3e4f5a6_organismes_notifies_referentiel.py  b7c8d9e0f1a2_phase5_2fa_totp_et_jeton_api.py  c3d4e5f6a7b8_types_equipement_et_fk_affaires.py  d5e6f7a8b9c0_architecture_dossier_composition.py  dd4ac392761f_registre_be_et_n_item_par_affaire.py  e1f2a3b4c5d6_fix_derive_fichiers_importes_index_referentiels.py  f3a4b5c6d7e8_metaux_apport_referentiel.py
tests/: conftest.py
tests/integration/: test_admin.py  test_affaires.py  test_api.py  test_auth.py  test_auth_2fa.py  test_dossier.py  test_fiche_technique.py  test_fichiers.py  test_formulaires.py  test_formulaires_ped.py  test_formulaires_simple.py  test_formulaires_table.py  test_formulaires_table2.py  test_i18n.py  test_jalons.py  test_par_affaire.py  test_referentiels.py  test_sommaire.py  test_suppression.py  test_wizard.py
tests/unit/: test_assemblage.py  test_hydr_service.py  test_ldap_auth.py  test_pdf_tasks.py  test_ped_categorie.py  test_registre_be.py  test_tasks_alertes.py  test_user_security.py  test_validators.py
(+40 files in other folders)
