[project]
name = "mdb-bff"
version = "0.1.0"
description = "MDB — Dossier Constructeur Qualité — Brown Fintube France Energy"
requires-python = ">=3.14"

# ── Ruff (linting + formatage, remplace flake8/isort) ────────
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (sécurité)
    "ANN", # annotations de types manquantes
]
ignore = [
    "S101",   # assert autorisé dans les tests
    "ANN204", # __init__ n'a pas besoin de retourner None explicitement
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]
"migrations/**" = ["ALL"]

# ── Black (formatage) ─────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py314"]

# ── Mypy (typage statique) ────────────────────────────────────
[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
local_partial_types = true
exclude = ["migrations/", "tests/"]

# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"
filterwarnings = ["ignore::DeprecationWarning"]

# ── Coverage ─────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
